// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComicsDetails should not render hidden on mobile 1`] = `
<article
  className="details visible-on-mobile"
>
  <div
    className="close-details hidden-on-gt-mobile"
    onClick={[MockFunction]}
  >
    close
  </div>
  <p
    className="detail-title"
  >
    Superman
  </p>
  <div
    className="detail-cover-text-container"
  >
    <div
      className="detail-cover"
    >
      <img
        alt="Superman"
        className=""
        src="cover.png"
      />
    </div>
    <div
      className="detail-text"
    >
      <ComicDetailsCharacters
        characters={
          Array [
            Object {
              "id": 0,
              "name": "Arcade",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009158",
            },
          ]
        }
      />
      <ComicDetailsCreators
        creators={
          Array [
            Object {
              "id": 0,
              "name": "Jeff Youngquist",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/4430",
              "role": "editor",
            },
          ]
        }
      />
      <b>
        Release:
      </b>
       
    </div>
  </div>
  <RedButton
    blank={true}
    classes={
      Array [
        "primary-button",
      ]
    }
    text="Learn more..."
  />
</article>
`;

exports[`ComicsDetails should render hidden on mobile 1`] = `
<article
  className="details hidden-on-mobile"
>
  <div
    className="close-details hidden-on-gt-mobile"
    onClick={[MockFunction]}
  >
    close
  </div>
  <p
    className="detail-title"
  >
    Superman
  </p>
  <div
    className="detail-cover-text-container"
  >
    <div
      className="detail-cover"
    >
      <img
        alt="Superman"
        className=""
        src="cover.png"
      />
    </div>
    <div
      className="detail-text"
    >
      <ComicDetailsCharacters
        characters={
          Array [
            Object {
              "id": 0,
              "name": "Arcade",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009158",
            },
          ]
        }
      />
      <ComicDetailsCreators
        creators={
          Array [
            Object {
              "id": 0,
              "name": "Jeff Youngquist",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/4430",
              "role": "editor",
            },
          ]
        }
      />
      <b>
        Release:
      </b>
       
    </div>
  </div>
  <RedButton
    blank={true}
    classes={
      Array [
        "primary-button",
      ]
    }
    text="Learn more..."
  />
</article>
`;
